--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <header>
-            <h1 class="glow-title">CESTA K <br><span>BOHATSTVÍ</span></h1>
+            <h1 class="glow-title">ZÁKLADY <br><span>SPOŘENÍ</span></h1>
         </header>
 
         <div class="windows-grid">
@@ -42,3 +42,4 @@
     </div>
 </body>
 </html>
+
